--- a/public/index.html
+++ b/public/index.html
@@ -69,5 +69,13 @@
 		<script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.0.0-beta.37/dist/web3.min.js"></script>
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
 		<script src="./Middleware.js"></script>
+		<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+		<lottie-player
+			src="https://assets3.lottiefiles.com/packages/lf20_QFQLva.json"
+			background="transparent"
+			speed="1"
+			loop
+			autoplay
+		></lottie-player>
 	</body>
 </html>
