--- a/public/index.html
+++ b/public/index.html
@@ -53,10 +53,14 @@
 		<center>
 			<br />
 			<br />
-			<br />
-			<br />
 			<div>
-				<input type="text" id="candidate" class="" />
+				<select id="candidate" name="cars">
+					<option>Select the candidate</option>
+					<option value="Pavitra">Pavitra</option>
+					<option value="Gyaneshwari">Gyaneshwari</option>
+					<option value="Shashwat">Shashwat</option>
+				</select>
+				<!-- <input type="text" id="candidate" class="" /> -->
 				<button
 					onClick="voteForCandidate()"
 					class="btn btn-primary"
